style.css
* {
    margin: 0;
    padding: 0;
}
body {
    text-align: center;
    font-family: 'Signika', sans-serif;

}
h1 {
    font-weight: 300;
}
p {
    margin: 30px;
}
code {
    color: rgb(223, 65, 157);
    background: rgb(199, 196, 196);
}
main {
    display: grid;
    grid-template-columns: 100vw;
    grid-template-rows: repeat(4, minmax(70vh, 1fr));
}

header {
    background-color: #40596B;
    color: #FFD05A;
    text-align: center;
}
ul li {
    display: inline-block;
    padding: 5px;
}
a {
    text-decoration: none;
    color: #FFD05A;
}
section {
    padding: 10px;
}
#hero {
    background-color: #55C0EB;
    padding: 20px;
}
.two-columns {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: auto;
    grid-template-areas: 
        'left right';
    grid-gap: 10px;
    align-items: center;
}
.left-side {
    grid-area: 'left';
}
.right-side {
    grid-area: 'right';
}
#tickybot {
    max-width: 100%;
    height: auto;
    display: block;
}
#about p {
    text-align: left;

}
#features {
    background-color: #90DCAA;
}
footer {
    background-color: #40596B;
    color: #ffffff;
}
footer p{
    margin: 0;
    font-size: .8rem;
    padding: 10px;
}
button {
    border-radius: 5px;
    padding: 5px;
    text-align: center;
    height: 50px;
    width: 150px;
    border: none;
    background-color: #ffffff;
    font-size: 100%;
}
button p{
    display: inline;
    vertical-align: 60%;
    margin: 0;
}
#call-to-action button {
    background-color: #40596B;
    color: #ffffff;
}
button img {
    margin-left: -10px;
    height: 2rem;
    width: 3rem;
}

hr {
   margin-left: 40vw;
   margin-right: 40vw;
   margin-top: -2px;
   border-color: #55C0EB;
   
}

.card-wrapper {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: 20rem;
    grid-gap: 10px;
    grid-template-areas: 
        "one two three";
    margin-top: 20px;
    margin-bottom: 10px;
}
div.cards {
    background: #40596B;
}
.cards img {
    height: 70%;
    width: auto;
    margin-top: 5px;
}
.cards .text {
    background: #ffffff;
    height: 30%;
    width: auto;
    margin: 0 auto;
}
.cards .text p {
    padding: 10px;
    margin: 0 auto;
}
#card-one {
    grid-area: 'one';
}
#card-two {
    grid-area: 'two';
}
#card-three {
    grid-area: 'three';
}

div#back-to-top{
   background-color: #FFD05A ;
   height: 50px;
   width: 50px;
   position: fixed;
   bottom: 0;
   right: 0;
   padding: 5px;
   visibility: hidden;
}

